--- a/webservices/README
+++ b/webservices/README
@@ -18,3 +18,17 @@ UAV WebServices
 
   * Run seagull_autopilot, seagull_communications, seagull_commons (see seagull documentation)
   * sbt run
+
+# Description of services
+ - telemetry
+     + input: optional input of selecting the sample ID
+     + output: the telemetry data from a sample
+     + access: `http://serverip:port/telemetry` for last telemetry sanple or `http://serverip:port/telemetry?45` for telemetry sample with ID=45
+ - waypoint: there may be several samples of the same waypoint in the database
+     + input: index of waypoint
+     + output: waypoint information
+     + access: `http://serverip:port/waypoint?index=99` to get waypoint with index=99
+ - trajectory
+     + input: vId (vehicle ID) and length (optional)
+     + output: all location points if no length is specified, the last #length locations otherwise
+     + access: `http://serverip:port/trajectory?vId=2050` to get all known locations from vehicle 2050; `http://serverip:port/trajectory?vId=2050&length=3` to get the last 3 locations from vehicle 2050.
